--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -7,7 +7,7 @@
 <body>
 <h1 align="center">Especies</h1>
     {% for specie in species %}
-        <img src="{{specie.imageField}}" width="400", height="300">
+        <img src="{{specie.imageFile}}" width="400", height="300">
     {% endfor %}
 </body>
 </html>
