--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -9,7 +9,7 @@
     {% for specie in species %}
         <section align = "center">
             <h2 >{{specie.name}}</h2>
-            <img src="{{specie.imageFile}}" width="400", height="300">
+            <img src="/{{specie.imageFile}}" width="400", height="300">
             <div>{{specie.scientificName}}</div>
              <p align="left">{{specie.description}}</p>
         </section>
