--- a/polls/templates/polls/registro.html
+++ b/polls/templates/polls/registro.html
@@ -19,7 +19,7 @@
         </div>
 
 
-        <form action="" method="post">
+        <form action="" method="post" enctype="multipart/form-data">
             {% csrf_token %}
             {% bootstrap_form form %}
             {% buttons %}
