--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -21,7 +21,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="{% url 'images:index' %}">Galeria</a>
+                <a class="navbar-brand" href="{% url 'images:index' %}">Especies</a>
             </div>
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
