--- a/polls/templates/polls/specie_information.html
+++ b/polls/templates/polls/specie_information.html
@@ -14,7 +14,7 @@
 <table width="100%">
     <tr>
         <th>
-            <img class ="img-responsive" style="margin: auto;" src="/{{specie.imageFile}}"/>
+            <img class ="img-responsive" style="margin: auto;" src="{{specie.imageURL}}"/>
         </th>
         <th>
             <h1>{{specie.name}}</h1>
