--- a/polls/templates/polls/specie_information.html
+++ b/polls/templates/polls/specie_information.html
@@ -9,6 +9,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Información de la especie</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body class="jumbotron">
 <table width="100%">
@@ -44,17 +48,42 @@
     {{comment.description}}
 </div>
 {% endfor %}
-<form action="{%url 'images:addComment' id_specie=specie.pk %}" method="GET">
-    <textarea rows="10" cols="100" style="margin: 20px 20px 20px 20px;" name="comment" placeholder="Agregue su comentario"></textarea>
-    <input type="text" value="{{specie.pk}}"  name="id" style="display:none"/>
-    {% buttons %}
-        <input type="submit" value="Agregar comentario" class="btn btn-primary btn-lg" style="margin: 20px;"/>
-    {% endbuttons %}
-</form>
+
+
+<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#addCommentModal">Agregar Comentario</button>
+<div id="addCommentModal" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Nuevo Comentario</h4>
+      </div>
+      <div class="modal-body">
+        <form action="{%url 'images:addComment' id_specie=specie.pk %}" method="GET">
+            <textarea rows="10" cols="70" style="margin: 20px 20px 20px 20px;" name="comment" placeholder="Agregue su comentario"></textarea>
+            <input type="text" value="{{specie.pk}}"  name="id" style="display:none"/>
+            <div class="modal-footer">
+                <input type="submit" value="Agregar" class="btn btn-primary btn-lg" style="margin: 20px;"/>
+            </div>
+        </form>
+
+    </div>
+  </div>
+</div>
+
 </section>
 
 {% buttons %}
     <a href="{% url 'images:index' %}" class="btn btn-primary btn-lg" style="   margin: 20px;">Regresar</a>
 {% endbuttons %}
+
+
+
+
 </body>
+
+
+
 </html>
