--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -60,7 +60,7 @@
          {% for specie in species %}
             <div class="col-md-4 col-sm-6 col-lg-3 well">
                 <h3>{{specie.name}} ({{specie.scientificName}})</h3>
-                <a href="{%url 'images:specieInformation' id_specie=specie.pk%}">
+                <a href="{%url 'images:specieInformationHtml' id_specie=specie.pk%}">
                     <img class ="img-responsive" src="{{specie.imageURL}}"/>
                 </a>
             </div>
